# shoe-knowledgegraph-construction

./: .gitignore  README.md  docker-compose.yml  insertdataintograph.py  main.py  pyproject.toml  relatekeypointstotopic.py
baml_src/: article.baml  clients.baml  generators.baml  topic.baml
