[project]
name = "shoe-knowledgegraph-construction"
version = "0.1.0"
description = "Extract information with BAML and create knowledge graph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "baml-py==0.212.0",
    "dotenv>=0.9.9",
    "neo4j>=6.0.2",
    "torch>=2.7.1",
    "transformers>=4.48.0",
]
